Regression: Converting curve object to mesh makes object disappear from 3D view #99661

Closed
opened 2022-07-13 06:49:02 +02:00 by Sergey · 9 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: Intel(R) HD Graphics 630 Intel 4.5.0 - Build 25.20.100.6471

Blender Version
Broken: version: 3.2.0, 3.3.0 Alpha
Worked: 3.1.2

Short description of error
It seems that new curve implementation does not work with object.to_mesh method.

Exact steps for others to reproduce the error

  1. Open new file
  2. Create Bezier Curve
  3. Switch to edit mode
  4. Open Python Console editor
  5. Execute C.object.to_mesh()
  6. Switch to object mode
  7. Curve disappears or even Blender crashes
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: Intel(R) HD Graphics 630 Intel 4.5.0 - Build 25.20.100.6471 **Blender Version** Broken: version: 3.2.0, 3.3.0 Alpha Worked: 3.1.2 **Short description of error** It seems that new curve implementation does not work with `object.to_mesh` method. **Exact steps for others to reproduce the error** 1. Open new file 2. Create Bezier Curve 3. Switch to edit mode 4. Open Python Console editor 5. Execute `C.object.to_mesh()` 6. Switch to object mode 7. Curve disappears or even Blender crashes
Author

Added subscriber: @randum

Added subscriber: @randum
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. Can confirm something has changed between 3.1 and the last blender release.
Will bisect.

Thanks for the report. Can confirm something has changed between 3.1 and the last blender release. Will bisect.
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Bisecting points me to a7c65ef4cb
cc @HooglyBoogly

(good and bad commits are 179100c02126 - c486da0238bd respectively)

Bisecting points me to a7c65ef4cb cc @HooglyBoogly (good and bad commits are `179100c02126` - `c486da0238bd` respectively)
Pratik Borhade changed title from Converting curve object to mesh makes object disappear from 3D view to Regression: Converting curve object to mesh makes object disappear from 3D view 2022-07-15 12:29:42 +02:00
Hans Goudey self-assigned this 2022-08-01 19:00:41 +02:00

This issue was referenced by 31e06a8c73

This issue was referenced by 31e06a8c73b3c43d339e60ccbbc7f7d14c8d5221

This issue was referenced by 90b7c3d05e

This issue was referenced by 90b7c3d05e58543650c4831bbc1f3765b526673b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99661
No description provided.